# shared_cache

./: .pre-commit-config.yaml  MANIFEST.in  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: test.yml
src/shared_cache/: __init__.py  service.py  shared.py  shared_cache.py
tests/: test_between_workers.py  test_main.py  test_shared_mem.py
