[metadata]
version = attr: shared_cache.__version__
license_files = LICENSE
name = shared_cache
author = Wassef911
author_email = wassef911@gmail.com
description = Across workers shared cache for python3
keywords = python3, pypi, package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wassef911/shared_cache
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11.4
[options.packages.find]
where=src

[options.extras_require]
dev =
    check-manifest
test =
    coverage

[options.entry_points]
console_scripts =
    shared_cache = shared_cache:main
